kube-prometheus-stack/middleware-inflight-limit-grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: inflightreq-grafana
  namespace: kube-prometheus-stack
spec:
  # Protect grafana from DDOS
  inFlightReq:
    amount: 100
