kube-prometheus-stack/middleware-protect-grafana-login.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: protect-grafana-login
  namespace: kube-prometheus-stack
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32 # This will break all login until we deploy something better
