kube-prometheus-stack/middleware-replace-path-anatar-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-path-annatar-grafana
  namespace: kube-prometheus-stack
spec:
  replacePath:
    path: /public-dashboards/5e9480a76da840bb9b81802a1d0b84fc
