kube-prometheus-stack/service-prometheus-kube-prometheus-stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: elfhosted-internal
  namespace: kube-prometheus-stack
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: elfhosted-internal-kube-prometheus-stack-${tailscale_suffix}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
  sessionAffinity: None
  type: ClusterIP
