kube-prometheus-stack/ingressroute-grafana.elfhosted.com.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana.${dns_domain}
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${dns_domain}`) && Path(`/login`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          kind: Service
          port: 80
      middlewares:  
        - name: error-pages
          namespace: traefik
        - name: protect-grafana-login
        - name: inflightreq-grafana

    - match: Host(`grafana.${dns_domain}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          kind: Service
          port: 80
      middlewares:  
        - name: error-pages
          namespace: traefik
        - name: rate-limit-grafana       
        - name: inflightreq-grafana
